syntax = "proto3";

package gspace;
import "google/protobuf/timestamp.proto";

option csharp_namespace = "gSpaceUser.Protos";

message NewsMessage {
  google.protobuf.Timestamp news_time = 1;
  string news_item = 2;
  string space_name = 3;
}

message NewsResponse {
  bool delivered = 1;
}

service Gspace {
    rpc PublishNews(stream NewsMessage) returns (NewsResponse);
}